# boe-scrapper

./: .gitignore  README.md  main.py  pyproject.toml  scrapy.cfg
boe_scraper/: __init__.py  entrypoint.py  re_parser.py  runner.py  settings.py
boe_scraper/runner/: base.py  edictos.py  edictos_re_parser.py  subastas.py
boe_scraper/scrapy/: items.py  middlewares.py  pipelines.py  settings.py
boe_scraper/scrapy/spiders/: boe_parser.py  edictos_boe_parser.py  re_boe_parser.py  subastas_boe_parser.py
boe_scraper/utils/: date.py  string_normalization.py  writter.py
