[project]
name = "boe_scraper"
version = "0.1.0"
description = "Scrapper of Editos Judiciales of Spanish BOE."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.2",
    "deltalake>=1.4.0",
    "polars>=1.38.0",
    "s3fs>=2026.2.0",
    "scrapy>=2.14.0",
    "single-source>=0.4.0",
]

[dependency-groups]
dev = [
    "altair[all]>=6.0.0",
    "jupyter>=1.1.1",
    "pydeck>=0.9.1",
    "ruff>=0.14.9",
]
