[project]
name = "boe_scraper"
version = "0.1.1"
description = "Scrapper of Editos Judiciales of Spanish BOE."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "deltalake>=1.5.0",
    "polars>=1.39.0",
    "scrapy>=2.14.0",
    "single-source>=0.4.0",
]

authors = [
  { name = "Carmelo Alcaraz", email = "carmeloalcarazcoy@gmail.com" },
]

license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/CarmeloCoy/boe-scraper"
Source = "https://github.com/CarmeloCoy/boe-scraper"
Issues = "https://github.com/CarmeloCoy/boe-scraper/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
boe-scraper = "boe_scraper.entrypoint:main"

[dependency-groups]
dev = [
    "altair[all]>=6.0.0",
    "jupyter>=1.1.1",
    "pydeck>=0.9.1",
    "ruff>=0.14.9",
]

[tool.uv.build-backend]
module-name = "boe_scraper"
module-root = ""