[project]
name = "boe_scraper"
version = "0.2.0"
description = "Scrapper of Editos Judiciales of Spanish BOE."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "adlfs>=2026.2.0",
    "fsspec>=2026.2.0",
    "gcsfs>=2026.2.0",
    "polars>=1.39.0",
    "s3fs>=2026.2.0",
    "scrapy>=2.14.0",
    "single-source>=0.4.0",
]

authors = [
  { name = "Carmelo Alcaraz", email = "carmeloalcarazcoy@gmail.com" },
]

license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/CarmeloCoy/boe-scraper"
Source = "https://github.com/CarmeloCoy/boe-scraper"
Issues = "https://github.com/CarmeloCoy/boe-scraper/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
boe-scraper = "boe_scraper.entrypoint:main"

[dependency-groups]
dev = [
    "altair[all]>=6.0.0",
    "jupyter>=1.1.1",
    "pydeck>=0.9.1",
    "ruff>=0.14.9",
    "tqdm>=4.67.3",
]

[tool.uv.build-backend]
module-name = "boe_scraper"
module-root = ""
